# wagtailosm

./: .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
src/wagtailosm/: __init__.py  wagtail_hooks.py
src/wagtailosm/static/wagtailosm/css/: wagtailadmin.css
test/: test_wagtailosm.py
wagtailosm/: __init__.py  wagtail_hooks.py
