[project]
name = "wagtailosm"
version = "0.4.0"
description = "Open Street Map integration for Wagtail"
readme = "README.md"
authors = [
    { name = "bbb", email = "benjamin@overtag.dk" }
]
requires-python = ">=3.10"
dependencies = [
    "django-osm-field>=0.6.0",
    "wheel>=0.22",
    "wagtail>=5.2",
]

[project.scripts]
wagtailosm = "wagtailosm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
